<?xml version="1.0"?>
<package format="2">
  <name>path_follower</name>
  <version>1.0.0</version>
  <description>The path_follower package</description>
  <!-- version 0.0.0 original -->
  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <!-- version 1.0.0 modified -->
  <maintainer email="marcos.barrera@seafloorsystems.com">Marcos Barrera</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>roscpp</depend>
  <depend>project11</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>path_planner_common</depend>
  
  <export>
  </export>
</package>
